--- a/app/frontend/components/pages/voting/voting.module.scss
+++ b/app/frontend/components/pages/voting/voting.module.scss
@@ -19,6 +19,10 @@
     border-color: var(--color-brand);
     background-color: var(--color-brand);
   }
+
+  @media screen and (max-width: $breakpoint-mobile) {
+    margin: 0 8px;
+  }
 }
 
 .progressStepText {
